client/jetpack-cloud/sections/agency-dashboard/downtime-monitoring/notification-settings/style.scss
@import "@wordpress/base-styles/mixins";
@import "@wordpress/base-styles/breakpoints";

@keyframes components-modal__appear-animation {
	from {
		transform: translateY(32px);
	}

	to {
		transform: translateY(0);
	}
}

.notification-settings-title-light {
	font-size: 0.75rem;
	line-height: 14px;
	color: var(--studio-gray-50);
}

.notification-settings__sub-title {
	@extend .notification-settings-title-light;
	position: absolute;
	inset-block-start: 50px;
}

.notification-settings__content {
	margin-block-start: -16px;
}

.notification-settings__content-heading-with-beta {
	display: flex;
	align-items: center;
	gap: 8px;
}

.notification-settings__beta-tag {
	background: var(--studio-gray-30);
	border-radius: 4px;
	font-style: normal;
	font-weight: 700;
	font-size: 0.75rem;
	line-height: 17px;
	display: flex;
	color: var(--studio-white);
	padding: 0 5px;
	margin-block-end: 8px;
}

.notification-settings__content-heading {
	font-size: 0.875rem;
	line-height: 17px;
	margin-block-end: 8px;
}

.notification-settings__content-sub-heading {
	@extend .notification-settings-title-light;
}

.notification-settings__content-block {
	margin-block-start: 24px;
	position: relative;
}

.notification-settings__link {
	text-decoration: underline;
}

.notification-settings__footer {
	margin-block-end: 32px;
	width: calc(100% - 64px); // reducing the left and right padding
	display: flex;
	justify-content: flex-start;
	flex-direction: column;
	position: absolute;
	bottom: 0;

	.notification-settings__footer-buttons {
		display: flex;
		flex-direction: column;
	}

	button {
		height: 36px;
		line-height: 18px;

		&:nth-child(2) {
			margin-block-start: 16px;
		}
	}

	@include break-mobile {
		position: static;
		justify-content: right;
		flex-direction: initial;
		margin-block-start: 32px;
		margin-block-end: 0;
		width: auto;

		.notification-settings__footer-buttons {
			justify-content: end;
			width: 100%;
			flex-direction: initial;
		}

		button {
			&:nth-child(2) {
				margin-inline-start: 12px;
				margin-block-start: 0;
			}
		}
	}
}

.select-dropdown .select-dropdown__container {
	display: block;
}

.notification-settings__duration-icon {
	position: relative;
	inset-block-start: 5px;
	inset-inline-end: 2px;
	width: 20px;
}

.notification-settings__toggle {
	width: 15%;
	display: inline-flex;
	justify-content: end;

	.components-form-toggle {
		margin-right: 0 !important;
	}
}

.notification-settings__toggle-content {
	width: 85%;
	display: inline-flex;
	flex-direction: column;
}

.notification-settings__modal {
	max-height: 100%;
	width: 480px;
	animation: components-modal__appear-animation 0.1s ease-out;
	animation-fill-mode: forwards;
}

.notification-settings__email-container {
	margin-block-start: 8px;
	width: 100%;

	.token-field__suggestions-list {
		display: none;
	}

	.token-field__remove-token {
		display: none;
	}

	.token-field__input-container {
		cursor: default;
	}
}

.notification-settings__email-condition {
	margin-block-start: 4px;
	@extend .notification-settings-title-light;
}

.notification-settings__toggle-container {
	@extend .notification-settings__content-block;
	display: inline-flex;
	flex-direction: row-reverse;
	width: 100%;
}

.notification-settings__toggle-container .components-base-control__field .components-flex {
	display: inline-flex;
	flex-direction: row-reverse;
}

.notification-settings__large-screen {
	display: none;
}

.notification-settings__small-screen {
	display: inherit;
}

.notification-settings__footer-validation-error {
	@extend .notification-settings-title-light;
	color: var(--color-scary-40);
	margin-block-end: 16px;
}

.notification-settings__warning {
	font-weight: 500;
	color: var(--color-scary-40);
	padding: 10px 0;

	.gridicon {
		position: relative;
		top: 2px;
		margin-right: 7px;
	}
}

