Fix monitoring notifications settings UI on mobile screen

--- a/client/jetpack-cloud/sections/agency-dashboard/downtime-monitoring/notification-settings/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/downtime-monitoring/notification-settings/style.scss
@@ -25,6 +25,11 @@
 
 .notification-settings__content {
 	margin-block-start: -16px;
+	padding-block-end: 120px;
+
+	@include break-mobile {
+		padding-block-end: 0;
+	}
 }
 
 .notification-settings__content-heading-with-beta {
@@ -66,13 +71,15 @@
 }
 
 .notification-settings__footer {
-	margin-block-end: 32px;
 	width: calc(100% - 64px); // reducing the left and right padding
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
 	position: absolute;
 	bottom: 0;
+	left: 0;
+	padding: 16px 32px;
+	background: var(--studio-white);
 
 	.notification-settings__footer-buttons {
 		display: flex;
@@ -93,8 +100,8 @@
 		justify-content: right;
 		flex-direction: initial;
 		margin-block-start: 32px;
-		margin-block-end: 0;
 		width: auto;
+		padding: 0;
 
 		.notification-settings__footer-buttons {
 			justify-content: end;
